--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,9 @@
   "name": "vthacksvi",
   "version": "1.0.0",
   "description": "Joint Expenses App",
-  "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify frontend/js/main.js -o frontend/js/bundle.js"
   },
   "repository": {
     "type": "git",
