--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   "dependencies": {
     "browserify": "^16.2.3",
     "handlebars": "^4.1.0",
-    "request": "^2.87.0"
+    "request": "^2.88.0"
   },
   "homepage": "https://github.com/vthacks-vi-n2jz/vthacksvi#readme"
 }
