--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Joint Expenses App",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify frontend/js/main.js -o frontend/js/bundle.js"
+    "build": "browserify js/main.js -o js/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   "dependencies": {
     "browserify": "^16.2.3",
     "handlebars": "^4.1.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "requires": "^1.0.2"
   },
   "homepage": "https://github.com/vthacks-vi-n2jz/vthacksvi#readme"
 }
